--- a/account-manager-frontend/package.json
+++ b/account-manager-frontend/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.1.2",
-    "@testing-library/user-event": "^12.6.0",
-    "axios": "^0.21.0",
-    "react": "^16.8.6",
-    "react-bootstrap": "^1.4.0"
-
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,12 +34,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@material-ui/data-grid": "^4.0.0-alpha.13",
-    "mui-datatables": "^3.7.3",
-    "react-date-range": "^1.1.3",
-    "react-dates": "^21.8.0",
-    "read-last-lines": "^1.7.2"
   }
 }
