--- a/account-manager-frontend/build.gradle
+++ b/account-manager-frontend/build.gradle
@@ -17,12 +17,16 @@ apply plugin: "com.moowork.node"
 
 node {
     download = true
-
-    // Set the work directory for unpacking node
     workDir = file("${project.buildDir}/nodejs")
-
-    // Set the work directory for NPM
     npmWorkDir = file("${project.buildDir}/npm")
+}
+
+repositories.whenObjectAdded {
+    if (it instanceof IvyArtifactRepository) {
+        metadataSources {
+            artifact()
+        }
+    }
 }
 
 task appNpmInstall(type: NpmTask) {
