--- a/account-manager-backend/gradle/wrapper/gradle-wrapper.properties
+++ b/account-manager-backend/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,5 @@
 #Mon Jun 29 10:00:33 CEST 2020
-distributionUrl=https://services.gradle.org/distributions/gradle-7.0-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.7-bin.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStorePath=wrapper/dists
