--- a/account-manager-frontend/build.gradle
+++ b/account-manager-frontend/build.gradle
@@ -15,6 +15,10 @@ buildscript {
 
 apply plugin: "com.moowork.node"
 
+task installJest(type: NpmTask) {
+    setNpmCommand("install", "jest")
+}
+
 node {
     download = true
 }
